# hongshao-poker-tools

./: .gitignore  MTT_staking_calculator.jsx  README.md  build.sh  index.html  manifest.json  sw.js
apps/mtt-staking/: index.html  package-lock.json  package.json  vite.config.js
apps/mtt-staking/src/: Calculator.jsx  main.css  main.jsx
assets/: chat.js  hand-ranking.js  pro-access.js  shared.css
data/tournament-structures/: README.md  templates.sample.json
desktop/: README.md
desktop/bounty-calculator/: BountyCalculator.py
desktop/squid-game/: cake_calculator.py  pay.xlsx
docs/: ARCHITECTURE.md  PRODUCTIZATION_PLAN.md
engines/equity/: Cargo.toml  README.md
engines/equity/crates/equity-api/: Cargo.toml
engines/equity/crates/equity-api/src/: main.rs
engines/equity/crates/equity-wasm/: Cargo.toml
engines/equity/crates/equity-wasm/src/: lib.rs
engines/range-zen/: .gitignore  Cargo.toml  README.md
engines/range-zen/crates/range-zen-api/: Cargo.toml
engines/range-zen/crates/range-zen-api/src/: main.rs
engines/range-zen/crates/range-zen-wasm/: Cargo.toml
engines/range-zen/crates/range-zen-wasm/src/: lib.rs
tools/bankroll-plan/: index.html
tools/bounty/: index.html
tools/deal-calc/: index.html
tools/equity/: index.html  worker.js
tools/flop-subsets/: index.html
tools/hand-recorder/: index.html
tools/mtt-staking/: build.sh  index.html
tools/pro/: index.html
tools/range-zen/: index.html  worker.js
tools/research-vault/: index.html
tools/squid-game/: index.html
tools/staking-calc/: index.html
tools/staking-solver/: index.html
tools/tournament-templates/: index.html
(+45 files in other folders)
