[package]
name = "equity-api"
version = "0.1.0"
edition = "2024"

[dependencies]
equity-core = { path = "../equity-core" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
