[package]
name = "equity-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
equity-core = { path = "../equity-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = 3
lto = true
