[package]
name = "range-zen-api"
version = "0.1.0"
edition = "2024"

[dependencies]
range-zen-core = { path = "../range-zen-core" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
